# multi-hp-controller

./: .gitignore  .gitpod.Dockerfile  Cargo.toml  LICENSE  README.md  code.py  eev.py  requirements.txt  rust-toolchain.toml  stepper.py
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md
hvac-controller-core/: Cargo.toml
hvac-controller-core/src/: lib.rs
hvac-controller-core/src/eev/: mod.rs
hvac-controller-core/src/hal/: mod.rs
hvac-controller-core/src/util/: mod.rs  yield_now.rs
hvac-controller-core/tests/: eev.rs  util.rs
hvac-controller-esp32/: Cargo.toml
hvac-controller-esp32/scripts/: flash.sh
scripts/: run-wokwi.sh
src/: main.rs
src/eev/: eev.rs  eev_test.rs
tests/: test_eev.py
