[package]
name = "hvac-controller-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = ["alloc"]
alloc = ["futures-core/alloc"]

[dependencies]
nb = { version = "*", optional = false, default-features = true }
embedded-hal = { version = "*", optional = false, default-features = true }
#embedded-hal-async = "0.1.0-alpha.1"
futures-core = { version = "0.3.4", optional = true, default-features = false }

[target.x86_64-unknown-linux-gnu.dependencies]
linux-embedded-hal = { version = "0.3", optional = false, features = ["gpio_cdev"] }
