[package]
name = "hvac-controller-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [] #["alloc"]
std = [] #["alloc"]
alloc = ["futures-core/alloc"]

[dependencies]
nb = { version = "1.0.0", optional = false, default-features = true }
embedded-hal = { version = "0.2.7", optional = false, default-features = true }
embedded-hal-async = { version = "0.1.0-alpha.1", optional = false, default-features = true }
async-mutex = { version = "1.4.0", optional = false, default-features = true }
futures-core = { version = "0.3.21", optional = true}
percentage = "0.1.0"

[dev-dependencies]
tokio = {version = "1", features = ["full"] }
mockall = "*"

[target.x86_64-unknown-linux-gnu.dev-dependencies]
linux-embedded-hal = { version = "0.3", optional = false, features = ["gpio_cdev"] }
