[package]
name = "multi-hp-controller"
version = "0.1.0"
authors = ["Val <valorekhov@gmail.com>"]
# edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]
qemu = []

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-sys = { version = "0.31.6", default-features = false, features = ["binstart", "panic_handler", "alloc_handler"] }
esp-idf-svc = { version = "0.42", default-features = false, features = ["alloc"] }

[build-dependencies]
embuild = "0.29"
anyhow = "1"
